force-app/main/default/objects/Brand_Closed_Period__c/Brand_Closed_Period__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold the definition of periods when the brand will not be trading</description>
    <label>Brand Closed Period</label>
    <nameField>
        <label>Brand Closed Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Closed Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>