force-app/main/default/objects/Brand_Closed_Period__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this closed period applies to the current year and should be used to calculate the total brand closed days</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>