force-app/main/default/objects/Brand_Closed_Period__c/fields/Brand_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Brand_Closed_Days__c</fullName>
    <formula>( (  To__c  -  From__c  )  + 1 )  -  Village_Closed_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days the brand will be closed over and above the number of days the village is closed</inlineHelpText>
    <label>Brand Closed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>