force-app/main/default/objects/Brand_Closed_Period__c/fields/Closed_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year__c</fullName>
    <formula>YEAR( From__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The year the period of closure relates to</inlineHelpText>
    <label>Closed Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>