force-app/main/default/objects/Brand_Closed_Period__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>the 1st day the brand will be closed</inlineHelpText>
    <label>From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>