force-app/main/default/objects/Brand_Closed_Period__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <inlineHelpText>Enter the last day the brand will be closed</inlineHelpText>
    <label>To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>