force-app/main/default/objects/Brand_Closed_Period__c/fields/Village_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Village_Closed_Days__c</fullName>
    <inlineHelpText>The number of days the village will already be closed in this period to avoid double counting the number of days the brand will be closed</inlineHelpText>
    <label>Village Closed Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>